--- a/app/sass/blocks/search.scss
+++ b/app/sass/blocks/search.scss
@@ -13,54 +13,6 @@
 	&:active{
 		background-image: url("../img/icon-search-active.svg");
 	}
-
-	&::after{
-		content: "";
-
-		position: absolute;
-		top: 45px;
-		left: 35px;
-
-		width: 25px;
-		height: 2px;
-		background-color: red;
-		transform: rotate(45deg);
-
-		animation: linkOpac 0.5s;
-
-		display: none;
-	}
-
-	&::before{
-		content: "";
-
-		position: absolute;
-		top: 45px;
-		left: 35px;
-
-		width: 25px;
-		height: 2px;
-		background-color: red;
-		transform: rotate(-45deg);
-
-		animation: linkOpac 0.5s;
-
-		display: none;
-	}
-
-	&:hover::after,
-	&:hover::before{
-		background-color: rgba(red, 0.4);
-	}
-}
-
-.search__link.search__form--opened{
-	background-image: none;
-
-	&::after,
-	&::before{
-		display: block;
-	}
 }
 
 @keyframes linkOpac{
@@ -100,6 +52,54 @@
 	.search__link{
 		height: 100%;
 		background-position: 47% 34px;
+
+		&::after{
+			content: "";
+
+			position: absolute;
+			top: 45px;
+			left: 35px;
+
+			width: 25px;
+			height: 2px;
+			background-color: red;
+			transform: rotate(45deg);
+
+			animation: linkOpac 0.5s;
+
+			display: none;
+		}
+
+		&::before{
+			content: "";
+
+			position: absolute;
+			top: 45px;
+			left: 35px;
+
+			width: 25px;
+			height: 2px;
+			background-color: red;
+			transform: rotate(-45deg);
+
+			animation: linkOpac 0.5s;
+
+			display: none;
+		}
+
+		&:hover::after,
+		&:hover::before{
+			background-color: rgba(red, 0.4);
+		}
+	}
+
+	.search__link.search__form--opened{
+		background-image: none;
+
+		&::after,
+		&::before{
+			display: block;
+		}
 	}
 
 	.search__form{
@@ -108,6 +108,7 @@
 		position: absolute;
 		top: 95px;
 		left: 50%;
+		z-index: 10;
 
 		transform: translateX(-50%);
 
